--- a/package.json
+++ b/package.json
@@ -1,27 +1,37 @@
 {
-    "name": "HotelAvenida-Back",
+    "name": "FinalProyectBack-AldanaArcidiacono",
     "version": "1.0.0",
-    "description": "API REST with DDD",
+    "description": "API server with express",
     "main": "index.js",
     "type": "module",
     "scripts": {
         "start": "node dist/index.js ",
-        "start:dev": "cross-env DEBUG=FP2022* PORT=7700 nodemon dist/index.js",
-        "start:ddd": "dotenv -e .env tsc && dotenv -e .env node dist/index.js",
+        "start:dev": "cross-env DEBUG=HA* PORT=7700 nodemon dist/index.js",
         "build": "tsc",
         "build:dev": "tsc --watch",
         "test": "cross-env NODE_ENV=test jest --watchAll --coverage",
         "super:test": "cross-env NODE_ENV=test jest --watchAll --coverage --runInBand",
         "test:prod": "cross-env NODE_ENV=test jest --coverage --runInBand",
-        "dev": "dotenv -e .env nodemon src/index.ts"
+        "dev": "run-p build:dev start:dev"
     },
     "keywords": [],
-    "author": "Aldana Arcidiacono",
+    "author": "",
     "license": "ISC",
     "prettier": {
         "singleQuote": true
     },
     "devDependencies": {
+        "cors": "^2.8.5",
+        "cross-env": "^7.0.3",
+        "debug": "^4.3.4",
+        "dotenv": "^16.0.3",
+        "express": "^4.18.2",
+        "jsonwebtoken": "^8.5.1",
+        "mongoose": "^6.7.2",
+        "morgan": "^1.10.0",
+        "npm-run-all": "^4.1.5",
+        "serve-favicon": "^2.5.0",
+        "@babel/plugin-transform-modules-commonjs": "^7.18.6",
         "@types/bcryptjs": "^2.4.2",
         "@types/cors": "^2.8.12",
         "@types/debug": "^4.1.7",
@@ -44,18 +54,18 @@
         "ts-jest": "^29.0.3",
         "typescript": "^4.8.4",
         "copyfiles": "^2.4.1",
-        "cors": "^2.8.5",
-        "cross-env": "^7.0.3",
-        "debug": "^4.3.4",
-        "dotenv": "^16.0.3",
         "eslint-config-xo": "^0.43.1",
         "eslint-config-xo-typescript": "^0.56.0",
-        "express": "^4.18.2",
-        "husky": "^8.0.3",
-        "jsonwebtoken": "^9.0.0",
-        "mongoose": "^7.0.0",
-        "morgan": "^1.10.0",
         "nodemon": "^2.0.20",
         "supports-color": "^9.3.1"
+    },
+    "babel": {
+        "env": {
+            "test": {
+                "plugins": [
+                    "@babel/plugin-transform-modules-commonjs"
+                ]
+            }
+        }
     }
 }
